--- a/Py_Basic.ipynb
+++ b/Py_Basic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCdGvjSG3puPiIs2wrRkXc",
+      "authorship_tag": "ABX9TyOZ1csavMGgX3RQQXKNT9tM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1122,9 +1122,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "ef"
-      ],
+      "source": [],
       "metadata": {
         "id": "gm5_XZ8SMwij"
       },
@@ -1139,8 +1137,17 @@
       "metadata": {
         "id": "L33hh99uMwcz"
       },
-      "execution_count": 1,
+      "execution_count": 10,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "run the below code to get the help"
+      ],
+      "metadata": {
+        "id": "6p9Lb-a3QUJ8"
+      }
     },
     {
       "cell_type": "code",
@@ -1150,14 +1157,287 @@
       "metadata": {
         "id": "P9bE_ifWMwaV"
       },
-      "execution_count": 7,
+      "execution_count": 13,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Strings"
+      ],
+      "metadata": {
+        "id": "LCX3PLBLQ7hN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text = 'My Name is Pavel Bodle and I am a Data-Scientist'\n",
+        "text"
+      ],
+      "metadata": {
+        "id": "upmJ-7s5Qd3a",
+        "outputId": "feec2335-7fcf-4555-b294-4b6bd9a7205b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'My Name is Pavel Bodle and I am a Data-Scientist'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text.split()"
+      ],
+      "metadata": {
+        "id": "qW0Ay79qQd1O",
+        "outputId": "716c8332-41a8-4f02-ae69-cb042f126d9f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['My', 'Name', 'is', 'Pavel', 'Bodle', 'and', 'I', 'am', 'a', 'Data-Scientist']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text.split('-')"
+      ],
+      "metadata": {
+        "id": "77HJDttDQdy9",
+        "outputId": "73f5004a-2336-48a5-977b-6fba6f45f222",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['My Name is Pavel Bodle and I am a Data', 'Scientist']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "''.join(text.split())"
+      ],
+      "metadata": {
+        "id": "mzIM_qR2Qdwi",
+        "outputId": "8381b6d3-6ef1-42f1-ed70-80fe48fad879",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'MyNameisPavelBodleandIamaData-Scientist'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "' '.join(text.split())"
+      ],
+      "metadata": {
+        "id": "KS_PyH2yQduC",
+        "outputId": "634f3e2d-4581-4b6c-f138-f88ad0f9ff4d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'My Name is Pavel Bodle and I am a Data-Scientist'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'+'.join(text.split())"
+      ],
+      "metadata": {
+        "id": "SUZPCCzkQdra",
+        "outputId": "ebdfe8af-f8d8-415e-db6f-d86b72430c76",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'My+Name+is+Pavel+Bodle+and+I+am+a+Data-Scientist'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text.lower()"
+      ],
+      "metadata": {
+        "id": "V4aXEVtkMwX_",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "e54f3a25-ce3b-43ad-b1c2-34c5cabbaa16"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'my name is pavel bodle and i am a data-scientist'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name = 'Pavel'\n",
+        "name[1:]"
+      ],
+      "metadata": {
+        "id": "4YTDNpyfMwVp",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "b3573187-393a-432c-8395-4482fcd22950"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'avel'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name[::-1] #reverse order"
+      ],
+      "metadata": {
+        "id": "lApXqrhcMwKh",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "6b15bfb5-158c-4bed-a5e3-7c7b14eec1a7"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'levaP'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "V4aXEVtkMwX_"
+        "id": "rAKgRqOWU31Y"
       },
       "execution_count": null,
       "outputs": []
@@ -1166,7 +1446,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "4YTDNpyfMwVp"
+        "id": "mgxK6HFtU3ye"
       },
       "execution_count": null,
       "outputs": []
@@ -1175,7 +1455,52 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "lApXqrhcMwKh"
+        "id": "fZ26pjtMU3vh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "NaO2msVBU3sz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "cIdOvRKhUmCk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "TBy_yGm7UmAN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "GVCz5atUUl9n"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "9_fs7ocHUl1V"
       },
       "execution_count": null,
       "outputs": []
