--- a/Py_Basic.ipynb
+++ b/Py_Basic.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZ1csavMGgX3RQQXKNT9tM",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyM82Fv9W0DbucPRv8a7uLaU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -829,6 +830,121 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Text Encoding"
+      ],
+      "metadata": {
+        "id": "-H8SGArSLv-5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# create a string\n",
+        "amount = u\"₹50\"\n",
+        "print('Default string: ', amount, '\\n', 'Type of string', type(amount), '\\n')\n",
+        "\n",
+        "# encode to UTF-8 byte format\n",
+        "amount_encoded = amount.encode('utf-8')\n",
+        "print('Encoded to UTF-8: ', amount_encoded, '\\n', 'Type of string', type(amount_encoded), '\\n')\n",
+        "\n",
+        "\n",
+        "# sometime later in another computer...\n",
+        "# decode from UTF-8 byte format\n",
+        "amount_decoded = amount_encoded.decode('utf-8')\n",
+        "print('Decoded from UTF-8: ', amount_decoded, '\\n', 'Type of string', type(amount_decoded), '\\n')"
+      ],
+      "metadata": {
+        "id": "Cpn5zvjpLwzU",
+        "outputId": "b870a07d-652d-4a04-8f70-905b60be1d83",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Default string:  ₹50 \n",
+            " Type of string <class 'str'> \n",
+            "\n",
+            "Encoded to UTF-8:  b'\\xe2\\x82\\xb950' \n",
+            " Type of string <class 'bytes'> \n",
+            "\n",
+            "Decoded from UTF-8:  ₹50 \n",
+            " Type of string <class 'str'> \n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vhXjg0ZeL6dD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "I7hm9LRxL6bE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "eE-ppsmcL6ZF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "-hr8_WO2L6WR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "zdtHQaIYL6T7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "KmZqwZDBL6Rl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "At-qqqrbL6PC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# 7-3-2025"
       ],
       "metadata": {
@@ -1137,7 +1253,7 @@
       "metadata": {
         "id": "L33hh99uMwcz"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1157,7 +1273,7 @@
       "metadata": {
         "id": "P9bE_ifWMwaV"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1183,7 +1299,7 @@
           "height": 35
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1212,7 +1328,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1238,7 +1354,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1265,7 +1381,7 @@
           "height": 35
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1295,7 +1411,7 @@
           "height": 35
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1325,7 +1441,7 @@
           "height": 35
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1355,7 +1471,7 @@
         },
         "outputId": "e54f3a25-ce3b-43ad-b1c2-34c5cabbaa16"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1386,7 +1502,7 @@
         },
         "outputId": "b3573187-393a-432c-8395-4482fcd22950"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1416,7 +1532,7 @@
         },
         "outputId": "6b15bfb5-158c-4bed-a5e3-7c7b14eec1a7"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
