added 3rd problem

--- a/00_Problem.ipynb
+++ b/00_Problem.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +28,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. Writing a Python Program to find the Sum of First n Natural Numbers using the while Loop."
+        "#1. Writing a Python Program to find the Sum of First n Natural Numbers using the while Loop."
       ],
       "metadata": {
         "id": "1zky-5tP4izu"
@@ -90,7 +89,86 @@
     {
       "cell_type": "markdown",
       "source": [
-        "2. Find out sum of odd numbers in a list?"
+        "## Efficient program to find sum of first n natural numbers.\n",
+        "Time Complexity: O(1)\n",
+        "\n",
+        "Auxiliary Space: O(1)"
+      ],
+      "metadata": {
+        "id": "CYRubzbRSliC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Returns sum of first n natural numbers\n",
+        "def findSum(n) :\n",
+        "\treturn n * (n + 1) / 2. # formula to find n natural numbers\n",
+        "\n",
+        "# Driver code\n",
+        "n = 7\n",
+        "print (findSum(n))"
+      ],
+      "metadata": {
+        "id": "BOjq2lcISaQp",
+        "outputId": "556c73fa-572f-456e-b1a7-2cc6db767d18",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "28.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Efficient Python program to find the sum of first n natural numbers that avoid\n",
+        "# overflow if the result is going to be within limits.\n",
+        "\n",
+        "# Returns sum of first n natural\n",
+        "# numbers\n",
+        "def findSum(n) :\n",
+        "\tif (n % 2 == 0) :\n",
+        "\t\treturn (n / 2) * (n + 1)\n",
+        "\n",
+        "# If n is odd, (n+1) must be even\n",
+        "\telse :\n",
+        "\t\treturn ((n + 1) / 2) * n\n",
+        "\n",
+        "# Driver code\n",
+        "n = 566\n",
+        "print (findSum(n))"
+      ],
+      "metadata": {
+        "id": "uMh56kk1TCSS",
+        "outputId": "d1a5d45a-8b8e-47ca-dd1a-fef766b743b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "160461.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#2. Find out sum of odd numbers in a list?"
       ],
       "metadata": {
         "id": "aTL_J3PU8FnT"
@@ -136,7 +214,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,10 +226,53 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#3. Count digits in a number !!!"
+      ],
+      "metadata": {
+        "id": "oapPG4BhTe0b"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = int(input(\"Enter x:\\n\"))\n",
+        "\n",
+        "res = 0\n",
+        "\n",
+        "while x>0:\n",
+        "\n",
+        "    x=x//10\n",
+        "    res = res + 1\n",
+        "\n",
+        "print(\"count of digit is :\",res)"
+      ],
+      "metadata": {
+        "id": "ad5FAMiThTsY",
+        "outputId": "6f098543-cd02-46a6-99a5-cb8d9e73506b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter x:\n",
+            "333\n",
+            "count of digit is : 3\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "ad5FAMiThTsY"
+        "id": "2mzfPyw1Vbrs"
       },
       "execution_count": null,
       "outputs": []
