--- a/00_Problem.ipynb
+++ b/00_Problem.ipynb
@@ -110,11 +110,11 @@
         "print (findSum(n))"
       ],
       "metadata": {
-        "id": "BOjq2lcISaQp",
-        "outputId": "556c73fa-572f-456e-b1a7-2cc6db767d18",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BOjq2lcISaQp",
+        "outputId": "556c73fa-572f-456e-b1a7-2cc6db767d18"
       },
       "execution_count": 5,
       "outputs": [
@@ -148,11 +148,11 @@
         "print (findSum(n))"
       ],
       "metadata": {
-        "id": "uMh56kk1TCSS",
-        "outputId": "d1a5d45a-8b8e-47ca-dd1a-fef766b743b8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uMh56kk1TCSS",
+        "outputId": "d1a5d45a-8b8e-47ca-dd1a-fef766b743b8"
       },
       "execution_count": 3,
       "outputs": [
@@ -250,10 +250,10 @@
       ],
       "metadata": {
         "id": "ad5FAMiThTsY",
-        "outputId": "6f098543-cd02-46a6-99a5-cb8d9e73506b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6f098543-cd02-46a6-99a5-cb8d9e73506b"
       },
       "execution_count": 27,
       "outputs": [
@@ -270,9 +270,43 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def count_digit(n):\n",
+        ""
+      ],
       "metadata": {
         "id": "2mzfPyw1Vbrs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "KeZi4j0MzFNc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Palindrome Number - Leetcode"
+      ],
+      "metadata": {
+        "id": "VJbYdV8ozJHz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def isPalindrome(x):\n",
+        "  if x < 0: return False\n",
+        ""
+      ],
+      "metadata": {
+        "id": "YgaX8vF1zFCf"
       },
       "execution_count": null,
       "outputs": []
