--- a/00_Problem.ipynb
+++ b/00_Problem.ipynb
@@ -290,6 +290,37 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "def fact(n):\n",
+        "    res = 1\n",
+        "    for i in range(2, n + 1):\n",
+        "        res *= i\n",
+        "    return res\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    number = 5\n",
+        "    print(fact(number))"
+      ],
+      "metadata": {
+        "id": "Dc0A6qWq3lKs",
+        "outputId": "9c3214df-f3d2-4097-de3d-ef747d398ce5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "120\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# Palindrome Number - Leetcode"
