--- a/Py_Basic.ipynb
+++ b/Py_Basic.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN3csAw44xpxNbl8q6Xm+ry",
+      "authorship_tag": "ABX9TyNldIFg5mQgA4sjWaK1N5L9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1735,13 +1735,84 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "# NLP - Revision"
+      ],
       "metadata": {
-        "id": "uhZNqT3tSOa5"
+        "id": "0Nn7esBAy7bY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# %pip install nltk"
+      ],
+      "metadata": {
+        "id": "drkeXA4GzKZi",
+        "outputId": "056f5bda-b1de-4978-e488-0760a34b2831",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: nltk in /usr/local/lib/python3.11/dist-packages (3.9.1)\n",
+            "Requirement already satisfied: click in /usr/local/lib/python3.11/dist-packages (from nltk) (8.1.8)\n",
+            "Requirement already satisfied: joblib in /usr/local/lib/python3.11/dist-packages (from nltk) (1.4.2)\n",
+            "Requirement already satisfied: regex>=2021.8.3 in /usr/local/lib/python3.11/dist-packages (from nltk) (2024.11.6)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.11/dist-packages (from nltk) (4.67.1)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "source": [
+        "import nltk\n",
+        "\n",
+        "# Download the required 'punkt_tab' data\n",
+        "nltk.download('punkt_tab')\n",
+        "\n",
+        "from nltk.corpus import stopwords\n",
+        "from nltk.tokenize import word_tokenize\n",
+        "\n",
+        "text = \"The cat is on the mat.\"\n",
+        "stop_words = set(stopwords.words('english'))\n",
+        "word_tokens = word_tokenize(text)\n",
+        "\n",
+        "filtered_sentence = [w for w in word_tokens if not w.lower() in stop_words]\n",
+        "print(filtered_sentence)  # Output: ['cat', 'mat']"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "id": "q2uWmR9nzzPI",
+        "outputId": "210ece1f-b650-4df5-ae7f-2f6d7ca02d5c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping tokenizers/punkt_tab.zip.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['cat', 'mat', '.']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
