--- a/Pandas_Numpy.ipynb
+++ b/Pandas_Numpy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNtKKu2LjuwnCiExFmBIrsC",
+      "authorship_tag": "ABX9TyOGtjmsgqM7tLjVKOdGCBeI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,232 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "## Numpy"
+      ],
       "metadata": {
-        "id": "HV8q4bahzf61"
+        "id": "ThIu2V-yzwuk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "NRZNyk4UzyqA"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = range(10000)\n",
+        "a"
+      ],
+      "metadata": {
+        "id": "1TIvC0Yjz2Bd",
+        "outputId": "65f3335a-6118-4efc-e451-2b561122789d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "range(0, 10000)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%timeit b = [i**3 for i in a]"
+      ],
+      "metadata": {
+        "id": "YlHEmwFR2gvl",
+        "outputId": "757ae3af-6947-43c9-ef1e-9698230dcffc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.11 ms ± 288 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c_numpy = np.arange(10000)\n",
+        "%timeit c_numpy**3"
+      ],
+      "metadata": {
+        "id": "9_ESy9nI2vPS",
+        "outputId": "46b9e475-579c-4311-80d3-e3f1600ebd4c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "48.4 µs ± 13.3 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.random.random([100,2])"
+      ],
+      "metadata": {
+        "id": "kx9KU6qU3h7U",
+        "outputId": "132b2e1a-68c7-4f14-c3e4-88cc53523652",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.10202623, 0.69383533],\n",
+              "       [0.1578003 , 0.27180549],\n",
+              "       [0.96961592, 0.75703611],\n",
+              "       [0.98234107, 0.20221792],\n",
+              "       [0.33210732, 0.21065114],\n",
+              "       [0.49352812, 0.3353459 ],\n",
+              "       [0.00184848, 0.6872899 ],\n",
+              "       [0.9553728 , 0.32872283],\n",
+              "       [0.38812478, 0.13024851],\n",
+              "       [0.09433853, 0.34280511],\n",
+              "       [0.55231502, 0.72311946],\n",
+              "       [0.14877715, 0.58033002],\n",
+              "       [0.94278671, 0.9760045 ],\n",
+              "       [0.07376151, 0.7938479 ],\n",
+              "       [0.27292236, 0.61404087],\n",
+              "       [0.00910485, 0.89135197],\n",
+              "       [0.38474999, 0.3401173 ],\n",
+              "       [0.18124615, 0.55813392],\n",
+              "       [0.67134493, 0.17647336],\n",
+              "       [0.54952885, 0.08779716],\n",
+              "       [0.36630398, 0.73794742],\n",
+              "       [0.33144377, 0.05395637],\n",
+              "       [0.59216789, 0.92231797],\n",
+              "       [0.52055201, 0.70706244],\n",
+              "       [0.1072399 , 0.36280774],\n",
+              "       [0.78260313, 0.67251746],\n",
+              "       [0.99360365, 0.36570717],\n",
+              "       [0.65796327, 0.65372189],\n",
+              "       [0.93916738, 0.69136502],\n",
+              "       [0.97587995, 0.14891698],\n",
+              "       [0.35469932, 0.70105655],\n",
+              "       [0.55135811, 0.88068843],\n",
+              "       [0.18519013, 0.72968209],\n",
+              "       [0.5643367 , 0.54197649],\n",
+              "       [0.07521247, 0.04160629],\n",
+              "       [0.30966992, 0.57265767],\n",
+              "       [0.88931166, 0.17362428],\n",
+              "       [0.78137758, 0.39601983],\n",
+              "       [0.11475707, 0.10358147],\n",
+              "       [0.11170087, 0.94817733],\n",
+              "       [0.75938517, 0.97452591],\n",
+              "       [0.67042312, 0.61904248],\n",
+              "       [0.04098075, 0.00640417],\n",
+              "       [0.42413112, 0.34842311],\n",
+              "       [0.3342218 , 0.29679914],\n",
+              "       [0.47495038, 0.87835241],\n",
+              "       [0.47399626, 0.18783412],\n",
+              "       [0.2601108 , 0.79498296],\n",
+              "       [0.9497354 , 0.54365569],\n",
+              "       [0.38042604, 0.31589748],\n",
+              "       [0.81646813, 0.50361661],\n",
+              "       [0.37708135, 0.82520349],\n",
+              "       [0.44028746, 0.65633945],\n",
+              "       [0.6111886 , 0.57954981],\n",
+              "       [0.7222387 , 0.43407265],\n",
+              "       [0.3521678 , 0.56796157],\n",
+              "       [0.97522414, 0.50103813],\n",
+              "       [0.34538296, 0.42539686],\n",
+              "       [0.76820659, 0.29831488],\n",
+              "       [0.05977832, 0.33938491],\n",
+              "       [0.36251683, 0.30452167],\n",
+              "       [0.77362809, 0.2578082 ],\n",
+              "       [0.38107732, 0.64531962],\n",
+              "       [0.01907992, 0.15319902],\n",
+              "       [0.19883372, 0.39816413],\n",
+              "       [0.75509751, 0.05601903],\n",
+              "       [0.89883816, 0.69560447],\n",
+              "       [0.30238083, 0.8729914 ],\n",
+              "       [0.54184028, 0.58269414],\n",
+              "       [0.84767823, 0.74993393],\n",
+              "       [0.35722708, 0.74978211],\n",
+              "       [0.45319294, 0.1044521 ],\n",
+              "       [0.02646401, 0.92139213],\n",
+              "       [0.03371885, 0.0155683 ],\n",
+              "       [0.2535263 , 0.4020107 ],\n",
+              "       [0.78579593, 0.29262222],\n",
+              "       [0.30997734, 0.73131605],\n",
+              "       [0.36873585, 0.56599663],\n",
+              "       [0.10019657, 0.02819056],\n",
+              "       [0.21908609, 0.5809104 ],\n",
+              "       [0.08020749, 0.38291419],\n",
+              "       [0.20016615, 0.93072094],\n",
+              "       [0.8638183 , 0.99625763],\n",
+              "       [0.60417435, 0.43092445],\n",
+              "       [0.50085595, 0.16886132],\n",
+              "       [0.65426755, 0.29227599],\n",
+              "       [0.9230328 , 0.88280796],\n",
+              "       [0.93098901, 0.55996708],\n",
+              "       [0.48742573, 0.63306198],\n",
+              "       [0.06972406, 0.32359485],\n",
+              "       [0.00677012, 0.79688743],\n",
+              "       [0.01942911, 0.86505525],\n",
+              "       [0.16796796, 0.54410959],\n",
+              "       [0.23917791, 0.49693484],\n",
+              "       [0.33721937, 0.80341382],\n",
+              "       [0.47780038, 0.25455336],\n",
+              "       [0.87605043, 0.83541394],\n",
+              "       [0.54421666, 0.59859931],\n",
+              "       [0.5749372 , 0.07196007],\n",
+              "       [0.19641666, 0.20165847]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "MN8YShF932iB"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
