--- a/Interview_Problems.ipynb
+++ b/Interview_Problems.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNtKKu2LjuwnCiExFmBIrsC",
+      "authorship_tag": "ABX9TyMtaT8XSOmh7jGJGAFlQesP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,54 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "### Stock Buy and Sell (Best Time to Buy and Sell Stock)\n",
+        "\n",
+        "> https://leetcode.com/problems/best-time-to-buy-and-sell-stock/description/\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "u01CyOVvJS9P"
+        "id": "PPSST-OpJvJu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "id": "u01CyOVvJS9P",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9029e42f-b9e9-490b-a50d-47a6f4cd52fd"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "865"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ],
+      "source": [
+        "prices = [100, 180, 260, 310, 40, 535, 695]\n",
+        "\n",
+        "def maxProfit(prices):\n",
+        "\n",
+        "  res = 0\n",
+        "\n",
+        "  for i in range(len(prices) - 1): ## loop to iterate only up to len(prices) - 1, preventing i+1 from going out of bounds.\n",
+        "    if prices[i+1] > prices[i]:\n",
+        "      res += prices[i+1] - prices[i]\n",
+        "  return res\n",
+        "\n",
+        "\n",
+        "maxProfit(prices)"
+      ]
     }
   ]
 }
